--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "overmind": "15.1.2",
     "overmind-react": "16.1.3",
     "page": "1.11.4",
+    "query-string": "^5.0.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-scripts": "2.0.3"
@@ -20,5 +21,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
